--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,14 @@
-name: Nguyen Le Anh Quan
-bio: A Loser Below All
+# main text of home
+name: John Doe
+bio: A Man who travels the world eating noodles
 
 # twitter summary info
-description: A blog about technology, stuff related, 
+description: A blog about technology and stuff related
 
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile_1.jpg
+picture: assets/images/profile.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
@@ -15,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://anhquan075.github.io
+url: https://sergiokopplin.github.io/indigo
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
@@ -33,31 +34,37 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: anhquandz0soai
-# twitter: mytwitter
-instagram: aquan1sme
+facebook: myfacebook
+twitter: mytwitter
+# instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
 # youtube: myyoutube
-spotify: Quân Nguy?n
-github: anhquan075
+# spotify: myspotify
+github: mygithub
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-# medium: medium
+medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: nguyenlequan02@gmail.com
+email: myemail@gmail.com
 
 authors:
-  anhquan:
-    name: Nguyen Le Anh Quan
-    bio: A Loser Below All
+  johndoe:
+    name: John Doe
+    bio: A Man who travels the world eating noodles
     external-image: false
-    picture: assets/images/profile_1.jpg
-    facebook: anhquandz0soai
+    picture: assets/images/profile.jpg
+    twitter: johndoe
+  jamesfoster:
+    name: James Foster
+    bio: A Man who develops software with coffee
+    external-image: false
+    picture: assets/images/james.jpg
+    twitter: jamesfoster
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
