--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # main text of home
-name: John Doe
+name: 'Nguyen Le Anh Quan'
 bio: A Man who travels the world eating noodles
 
 # twitter summary info
