Add info to profile

--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ instagram: aquan1sme
 # pinterest: mypinterest
 # linkedin: mylinkedin
 # youtube: myyoutube
-spotify: Quân Nguy?n
+# spotify: Quân Nguy?n
 github: anhquan075
 # gitlab: mygitlab
 # lastfm: mylastfm
@@ -50,7 +50,7 @@ github: anhquan075
 # medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: nguyenlequan05@gmail.com
+email: nguyenlequan02@gmail.com
 
 authors:
   johndoe:
