--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # main text of home
-name: Nguyen Le Anh Quan
-bio: Test
+# name: Nguyen Le Anh Quan
+bio: "Test"
 
 # twitter summary info
-description: A blog about technology and stuff related
+description: "A blog about technology and stuff related"
 
 # if it's an external image, update below for true
 # better with square images
