--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
+# main text of home
 name: Nguyen Le Anh Quan
-bio: Test
+bio: A Man who travels the world eating noodles
 
 # twitter summary info
 description: A blog about technology and stuff related
@@ -15,7 +16,7 @@ resume: true
 resume-external: true
 resume-url: https://google.com/?q=my+resume
 
-url: https://anhquan075.github.io
+url: https://anhquan075.github.io/
 # your url: https://USERNAME.github.io
 
 permalink: /:title/
@@ -33,23 +34,23 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: anhquandz0soai
-# twitter: mytwitter
-instagram: aquan1sme
+facebook: myfacebook
+twitter: mytwitter
+# instagram: myinstagram
 # pinterest: mypinterest
 # linkedin: mylinkedin
 # youtube: myyoutube
-# spotify: Quân Nguy?n
-github: anhquan075
+# spotify: myspotify
+github: mygithub
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-# medium: medium
+medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: nguyenlequan02@gmail.com
+email: myemail@gmail.com
 
 authors:
   johndoe:
