--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ disqus:
   categories: [blog, project] # only show disqus for posts that have these categories
 
 # if you don't have any of social below, comment the line
-facebook: myfacebook
-twitter: mytwitter
-# instagram: myinstagram
+facebook: anhquandz0soai
+# twitter: mytwitter
+instagram: aquan1sme
 # pinterest: mypinterest
 # linkedin: mylinkedin
 # youtube: myyoutube
