Add social network

--- a/_config.yml
+++ b/_config.yml
@@ -41,16 +41,16 @@ instagram: aquan1sme
 # linkedin: mylinkedin
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: anhquan075
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
 # quora: userquora
 # reddit: username
-medium: medium
+# medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: nguyenlequan02@gmail.com
 
 authors:
   johndoe:
