--- a/_config.yml
+++ b/_config.yml
@@ -53,18 +53,12 @@ github: anhquan075
 email: nguyenlequan02@gmail.com
 
 authors:
-  johndoe:
-    name: John Doe
+  nguyenanhquan:
+    name: Nguyen Le Anh Quan
     bio: A Man who travels the world eating noodles
-    external-image: false
-    picture: assets/images/profile.jpg
-    twitter: johndoe
-  jamesfoster:
-    name: James Foster
-    bio: A Man who develops software with coffee
-    external-image: false
-    picture: assets/images/james.jpg
-    twitter: jamesfoster
+    external-image: true
+    picture: assets/images/profile_1.jpg
+    facebook: anhquandz0soai
 
 # do you want a larger site? change the option below
 # options: [normal, large] | default: normal
