--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ url: https://anhquan075.github.io/
 permalink: /:title/
 
 # To enable google analytics, supply your token below
-# analytics-google: 'UA-MYANALYTICS'
+analytics-google: 'G-1MZL4RZPDR'
 
 # To enable piwik tracking, supply your url & site ID below
 # analytics-piwik-url: 'piwik.my-host.com'
